Fix call buttons layout issues

--- a/resources/css/scss/pages/_inner.scss
+++ b/resources/css/scss/pages/_inner.scss
@@ -625,6 +625,74 @@ h1.page_title {
 }
 
 
+.thank_you_cta_container_wrapper {
+	margin: 0 auto;
+
+	.thank_you_cta_container {
+	
+		.info_boxes {
+			width: 571px;
+			margin: 0 auto;
+			padding: 20px 0 80px;
+	
+			.cell {
+				width: 273px;
+				margin: 0;
+	
+				.info_box {
+					padding: 19px 16px 9px 16px;
+	
+					.icon_wrapper {
+						width: 31px;
+						height: 36px;
+						margin-bottom: 20px;
+					}
+	
+					.address {
+						font-size: 11px;
+						line-height: 13px;
+					}
+			
+					.phone {
+						font-size: 37px;
+						line-height: 45px;
+					}
+				}
+				
+				&:last-child {
+					margin-left: 25px;
+	
+					@media (max-width:600px) {
+						margin-left: 0;
+						margin-top: 20px;
+					}
+				}
+			}
+			
+			@media (max-width:600px) { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+				flex-direction: column;
+				width: 273px;
+			}
+	
+		}
+		
+		@media (min-width:320px) { /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
+		}
+		@media (min-width:480px) { /* smartphones, Android phones, landscape iPhone */
+		}
+		@media (min-width:600px) { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+		}
+		@media (min-width:782px) { /* tablet, landscape iPad, lo-res laptops ands desktops */
+		}
+		@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */
+		}
+		@media (min-width:1281px) { /* hi-res laptops and desktops */
+		}
+	
+	}
+}
+
+
 .about_template {
 
     .sec_title {
